kubernetes/components/service/headless.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubia-headless
spec:
  selector:
    app: kubia
  clusterIP: None
  ports:
  - port: 80
    targetPort: 8080
