kubernetes/components/service/tls-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tls-kubia-ingress
spec:
  tls:
  - hosts: 
    - kubia.example.com
    secretName: secret-tls
  rules:
  - host: kubia.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kubia-internal-service
            port:
              number: 8080
